--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@sanity/client": "^7.9.0",
     "@sanity/image-url": "^1.1.0",
-    "framer-motion": "^12.23.12",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
