--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sanity/client": "^7.9.0",
+    "@sanity/client": "^7.10.0",
     "@sanity/image-url": "^1.1.0",
+    "dotenv": "^17.2.1",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
